--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -23,34 +23,31 @@
 								<div class="inner">
 
 									<!-- Logo -->
-										<h1><a href="index.html" id="logo">ZeroFour</a></h1>
+										<h1><a href="index.html" id="logo" ><img src="images/twcb lOGO NEW copy.jpg" alt=""></h1>
 
 									<!-- Nav -->
-										<nav id="nav">
-											<ul>
-												<li><a href="index.html">Home</a></li>
-												<li>
-													<a href="#">Dropdown</a>
-													<ul>
-														<li><a href="#">Lorem ipsum dolor</a></li>
-														<li><a href="#">Magna phasellus</a></li>
-														<li>
-															<a href="#">Phasellus consequat</a>
-															<ul>
-																<li><a href="#">Lorem ipsum dolor</a></li>
-																<li><a href="#">Phasellus consequat</a></li>
-																<li><a href="#">Magna phasellus</a></li>
-																<li><a href="#">Etiam dolore nisl</a></li>
-															</ul>
-														</li>
-														<li><a href="#">Veroeros feugiat</a></li>
-													</ul>
-												</li>
-												<li><a href="left-sidebar.html">Left Sidebar</a></li>
-												<li class="current_page_item"><a href="right-sidebar.html">Right Sidebar</a></li>
-												<li><a href="no-sidebar.html">No Sidebar</a></li>
-											</ul>
-										</nav>
+									<nav id="nav">
+										<ul>
+											<li class="current_page_item"><a href="index.html">Home</a></li>
+											<li>
+												<a href="#">Content</a>
+												<ul>
+													<li><a href="right-sidebar.html">Podcast</a></li>
+													<li><a href="#">Live Calls</a></li>
+													<li>
+														<a href="#">More Shows</a>
+														<ul>
+															<li><a href="left-sidebar.html">Locked On Bulls</a></li>
+															<li><a href="left-sidebar.html">Espn 1000</a></li>
+															
+														</ul>
+													</li>
+													<li><a href="https://www.youtube.com/@TheWindyCityBreeze">Youtube Channel</a></li>
+												</ul>
+											</li>
+											<li><a href="no-sidebar.html">Windycity Store</a></li>
+										</ul>
+									</nav>
 
 								</div>
 							</header>
@@ -71,11 +68,11 @@
 
 												<article>
 													<header class="major">
-														<h2>Right Sidebar</h2>
-														<p>Which means the sidebar is on the right</p>
+														<h2>Podcast</h2>
+														<p>Want to listen on the go?</p>
 													</header>
 
-													<span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
+													<span class="image featured"><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.podcasts.apple.com/us/podcast/the-windy-city-breeze-daily-chicago-sports-talk/id1375266565"></iframe></span>
 
 													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
@@ -109,14 +106,11 @@
 
 												<section>
 													<header class="major">
-														<h2>Subheading</h2>
+														<h2>Find Us On Twitter</h2>
 													</header>
-													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam.</p>
+													<p>Follow to stay up to date not only on big chicago sports news but world-wide sports information.</p>
 													<footer>
-														<a href="#" class="button icon solid fa-info-circle">Find out more</a>
+														<a href="https://twitter.com/TheWCBreeze" class="button icon solid fa-info-circle">Check us out</a>
 													</footer>
 												</section>
 
