--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										</div>
 										<div class="col-4 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/Stacey King.jpg" alt="" width="200" height="175"/></a>
 												<header class="second icon solid fa-cog">
 													<h3>Stacy King</h3>
 													<p>Former Chicago Bulls Power Forward</p>
@@ -125,13 +125,9 @@
 										<div class="col-6 col-12-medium">
 											<section>
 												<header class="major">
-													<h2>And this is a subheading</h2>
-													<p>It’s important but clearly not *that* important</p>
+													<h2>Big News</h2>
 												</header>
-												<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-												Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-												Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-												consequat etiam.</p>
+												<p>Stay up to date with what we have in store </p>
 												<footer>
 													<a href="#" class="button medium icon solid fa-arrow-circle-right">Let's do this</a>
 												</footer>
@@ -140,13 +136,10 @@
 										<div class="col-6 col-12-medium">
 											<section>
 												<header class="major">
-													<h2>This is also a subheading</h2>
-													<p>And is as unimportant as the other one</p>
+													<h2>Join the discord</h2>
+													<p></p>
 												</header>
-												<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-												Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-												Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-												consequat etiam.</p>
+												<p>Get the special perks when you become a Breeze Super Fan</p>
 												<footer>
 													<a href="#" class="button medium alt icon solid fa-info-circle">Wait, what?</a>
 												</footer>
@@ -165,7 +158,7 @@
 
 										<!-- Cast -->
 											<section class="box article-list">
-												<h2 class="icon fa-file-alt">The Crew</h2>
+												<h2 class="Mid">The Crew</h2>
 
 												<!-- Excerpt -->
 													<article class="box excerpt">
@@ -209,23 +202,7 @@
 
 										<!-- Spotlight -->
 											<section class="box spotlight">
-												<h2 class="icon fa-file-alt">Spotlight</h2>
-												<article>
-													<a href="#" class="image featured"><img src="images/pic07.jpg" alt=""></a>
-													<header>
-														<h3><a href="#">Neural Implants</a></h3>
-														<p>The pros and cons. Mostly cons.</p>
-													</header>
-													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper mod
-													quisturpis nisi consequat ornare in, hendrerit in lectus semper mod quis eget mi quat etiam
-													lorem. Phasellus quam turpis, feugiat sed et lorem ipsum dolor consequat dolor feugiat sed
-													et tempus consequat etiam.</p>
-													<p>Lorem ipsum dolor quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper
-													mod quisturpis nisi consequat etiam lorem sed amet quam turpis.</p>
-													<footer>
-														<a href="#" class="button alt icon solid fa-file-alt">Continue Reading</a>
-													</footer>
-												</article>
+												
 											</section>
 
 									</div>
