--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -23,34 +23,31 @@
 								<div class="inner">
 
 									<!-- Logo -->
-										<h1><a href="index.html" id="logo">ZeroFour</a></h1>
+									<h1 id="logo"><a href="index.html" ><img src="images/twcb lOGO NEW copy.jpg" alt="" ></a></h1>
 
 									<!-- Nav -->
-										<nav id="nav">
-											<ul>
-												<li><a href="index.html">Home</a></li>
-												<li>
-													<a href="#">Dropdown</a>
-													<ul>
-														<li><a href="#">Lorem ipsum dolor</a></li>
-														<li><a href="#">Magna phasellus</a></li>
-														<li>
-															<a href="#">Phasellus consequat</a>
-															<ul>
-																<li><a href="#">Lorem ipsum dolor</a></li>
-																<li><a href="#">Phasellus consequat</a></li>
-																<li><a href="#">Magna phasellus</a></li>
-																<li><a href="#">Etiam dolore nisl</a></li>
-															</ul>
-														</li>
-														<li><a href="#">Veroeros feugiat</a></li>
-													</ul>
-												</li>
-												<li class="current_page_item"><a href="left-sidebar.html">Left Sidebar</a></li>
-												<li><a href="right-sidebar.html">Right Sidebar</a></li>
-												<li><a href="no-sidebar.html">No Sidebar</a></li>
-											</ul>
-										</nav>
+									<nav id="nav">
+										<ul>
+											<li class="current_page_item"><a href="index.html">Home</a></li>
+											<li>
+												<a href="#">Content</a>
+												<ul>
+													<li><a href="right-sidebar.html">Podcast</a></li>
+													<li><a href="#">Live Calls</a></li>
+													<li>
+														<a href="#">More Shows</a>
+														<ul>
+															<li><a href="left-sidebar.html">Locked On Bulls</a></li>
+															<li><a href="left-sidebar.html">Espn 1000</a></li>
+															
+														</ul>
+													</li>
+													<li><a href="https://www.youtube.com/@TheWindyCityBreeze">Youtube Channel</a></li>
+												</ul>
+											</li>
+											<li><a href="no-sidebar.html">Windycity Store</a></li>
+										</ul>
+									</nav>
 
 								</div>
 							</header>
@@ -71,34 +68,11 @@
 
 												<section>
 													<header class="major">
-														<h2>Subheading</h2>
+														<h2>Add us on Tik Tok</h2>
 													</header>
-													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam.</p>
+													<p>More funny content found there!</p>
 													<footer>
-														<a href="#" class="button icon solid fa-info-circle">Find out more</a>
-													</footer>
-												</section>
-
-												<section>
-													<header class="major">
-														<h2>Subheading</h2>
-													</header>
-													<ul class="style2">
-														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-														<li><a href="#">Ornare in hendrerit in lectus</a></li>
-														<li><a href="#">Semper mod quis eget mi dolore</a></li>
-														<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-														<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-														<li><a href="#">Semper mod quisturpis nisi</a></li>
-														<li><a href="#">Consequat etiam lorem phasellus</a></li>
-														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-														<li><a href="#">Semper mod quisturpis nisi</a></li>
-													</ul>
-													<footer>
-														<a href="#" class="button icon solid fa-arrow-circle-right">Do Something</a>
+														<a href="#" class="button icon solid fa-info-circle">click here to go</a>
 													</footer>
 												</section>
 
@@ -111,34 +85,13 @@
 
 												<article>
 													<header class="major">
-														<h2>Left Sidebar</h2>
-														<p>Which means the sidebar is on the left</p>
+														<h2>Locked On Bulls</h2>
+														<p>You should be watching</p>
 													</header>
-
-													<span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
-
-													<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-													Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-													Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-													consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-													<h3>More intriguing information</h3>
-													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-													justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-													ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-													vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-													Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-													rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-													Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-													Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-													<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-													quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-													Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-													fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-													Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-													Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-												</article>
+											<!-- video -->
+													<iframe id="LOB" width="600" height="400"
+													src="https://www.youtube.com/embed?listType=playlist&list=PLfmZUzyev2xn1FIzSk9tTq_-mnHyHnRZ1" frameborder="0"></iframe>
+														
 
 										</div>
 									</div>
