--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<div id="page-wrapper">
 
 			<!--Video-->
-			<container id="video" id="container">
-			<iframe width="420" height="250"
+			<container id="video" id="container" >
+			<iframe id="mini" width="420" height="250"
 			src="https://www.youtube.com/embed?listType=playlist&list=UU2dxCU59lVh_atF0EmKfA5g" frameborder="0"></iframe>
 			</container>
 			<!-- Header -->
@@ -28,7 +28,7 @@
 								<div class="inner">
 
 									<!-- Logo -->
-										<h1><a href="index.html" id="logo" ><img src="images/twcb lOGO NEW copy.jpg" alt=""></a></h1>
+										<h1><a href="index.html" ><img src="images/twcb lOGO NEW copy.jpg" alt="" id="logo"></a></h1>
 
 									<!-- Nav -->
 										<nav id="nav">
@@ -141,7 +141,7 @@
 												</header>
 												<p>Get the special perks when you become a Breeze Super Fan</p>
 												<footer>
-													<a href="#" class="button medium alt icon solid fa-info-circle">Wait, what?</a>
+													<a href="https://discord.gg/8t65uTuN" class="button medium alt icon solid fa-info-circle">Wait, what?</a>
 												</footer>
 											</section>
 										</div>
