--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -72,7 +72,7 @@
 													</header>
 													<p>More funny content found there!</p>
 													<footer>
-														<a href="#" class="button icon solid fa-info-circle">click here to go</a>
+														<a href="https://www.tiktok.com/@patthedesigner?is_from_webapp=1&sender_device=pc" class="button icon solid fa-info-circle">click here to go</a>
 													</footer>
 												</section>
 
