--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -72,7 +72,7 @@
 														<p>Want to listen on the go?</p>
 													</header>
 
-													<span class="image featured"><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.podcasts.apple.com/us/podcast/the-windy-city-breeze-daily-chicago-sports-talk/id1375266565"></iframe></span>
+													<span ><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.podcasts.apple.com/us/podcast/the-windy-city-breeze-daily-chicago-sports-talk/id1375266565"></iframe></span>
 
 												</article>
 
